# ms-mcp

./: IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  analyzer.py  demo_mfu_calculator.py  pyproject.toml  server.py  test_auto_tuning_env_check.py  test_mfu_calculator.py
.github/workflows/: sync-to-gitcode.yml
docs/: ARCHITECTURE_REVIEW.md  SKILLS_USAGE.md  skills详细技术方案.md
examples/: debug_import_issue.py  debug_regex.py  debug_step_by_step.py  profiling_tool_usage.py  skill_config_demo.py  skill_driven_analysis.py  test_regex_debug.py  test_rulebook_parser.py  usage_example.py
knowledge/: tools.json
skills/: MFU_CALCULATOR_README.md  PROFILING_ANOMALY_TOOL_README.md  __init__.py  aicpu_analyzer.py  anomaly_reporter.py  arch_report.py  indexer.py  kernel_details_parser.py  mfu_calculator_tool.py  parser.py  profiling_analyzer.py  profiling_anomaly_tool.py  profiling_full_tool.py  reranker.py  retriever.py  router.py  skill_parser.py  skill_parser_backup.py  skill_parser_old_v3.py  soft_attribution.py  step_analyzer.py  step_grouper.py  structure_analyzer.py  trace_view_parser.py  vector_store.py  wait_anchor.py
skills/ais-bench/: SKILL.md
skills/ascend-accuracy-debug/: SKILL.md
skills/ascend-auto-profiling/: SKILL.md
skills/ascend-memscope/: SKILL.md
skills/ascend-msmodelslim/: SKILL.md
skills/ascend-msprobe/: SKILL.md
skills/ascend-msserviceprofiler/: SKILL.md
skills/calc_mfu/: __init__.py  calculator.py
skills/msdebug/: SKILL.md
test_data/: op_statistic_0.csv  op_summary_0.csv  operator_memory_0.csv  step_trace_time.csv
(+11 files in other folders)
