[project]
name = "ms-mcp"
version = "0.1.0"
description = "昇腾工具推荐与性能分析 MCP Server（支持 PDF 知识库检索）"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pymupdf4llm>=0.0.10",
    "rank-bm25>=0.2.2",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
]
    dependencies = [
        "mcp[cli]>=1.0.0",
        "pymupdf4llm>=0.0.10",
        "rank-bm25>=0.2.2",
        "beautifulsoup4>=4.12.0",
        "python-docx>=1.1.0",
        "pandas>=2.0.0",
    ]

[project.optional-dependencies]
vector-search = [
    "sentence-transformers>=2.3.0",
    "numpy>=1.24.0",
]
reranker = [
    "sentence-transformers>=2.3.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
